// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is disabled 1`] = `
<button
  class="dse-button__container"
  disabled=""
  type="button"
>
  Send
</button>
`;

exports[`Button was rendered 1`] = `
<button
  class="dse-button__container"
  type="button"
>
  Send
</button>
`;

exports[`Button was rendered with style provided 1`] = `
<button
  class="dse-button__container"
  style="width: 100px;"
  type="button"
>
  Send
</button>
`;
